--- a/BoW_model.ipynb
+++ b/BoW_model.ipynb
@@ -21,6 +21,8 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "nltk.download('punkt')\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import pandas as pd\n",
     "# Initialize the stopwords\n",
     "stop_words = set(stopwords.words('english'))"
    ]
@@ -32,7 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the sentences.\n",
     "sentence_1 = \"I want to invest for retirement.\"\n",
     "sentence_2 = \"Should I invest in mutual funds, or should I invest in stocks?\"\n",
     "sentence_3 = \"I should schedule an appointment with a financial planner.\""
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a898a91c",
    "metadata": {},
    "outputs": [
@@ -71,7 +72,7 @@
        "  'planner']]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +83,6 @@
     "\n",
     "# Create a regex pattern to remove punctuation. \n",
     "pattern = r'[^a-zA-Z\\s ]'\n",
-    "\n",
-    "# Create an empty list to hold the tokens.\n",
     "tokens = []\n",
     "\n",
     "# Remove punctuation, tokenize sentence 1, and add the tokens to the tokens list.\n",
@@ -91,22 +90,22 @@
     "sentence_1_tokens = nltk.word_tokenize(sentence_1_cleaned.lower())\n",
     "tokens.append(sentence_1_tokens)\n",
     "\n",
-    "# Remove punctuation, tokenize sentence 2, and add the tokens to the tokens list.\n",
+    "# Repeat for sentence 2\n",
     "sentence_2_cleaned = re.sub(pattern, ' ', sentence_2)\n",
     "sentence_2_tokens = nltk.word_tokenize(sentence_2_cleaned)\n",
     "tokens.append(sentence_2_tokens)\n",
     "\n",
-    "# Remove punctuation, tokenize sentence 3, and add the tokens to the tokens list.\n",
+    "# Repeat for sentence 3\n",
     "sentence_3_cleaned = re.sub(pattern, ' ', sentence_3)\n",
     "sentence_3_tokens = nltk.word_tokenize(sentence_3_cleaned)\n",
     "tokens.append(sentence_3_tokens)\n",
-    "# Display the tokens.\n",
+    "\n",
     "tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "3dc44861",
    "metadata": {},
    "outputs": [
@@ -118,7 +117,7 @@
        " ['I', 'schedule', 'appointment', 'financial', 'planner']]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,13 +129,12 @@
     "    filtered_token = [word for word in token if not word in stop_words]\n",
     "    filtered_tokens.append(filtered_token)\n",
     "    \n",
-    "# Diplay the filtered_tokens\n",
     "filtered_tokens\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "bfff94eb",
    "metadata": {},
    "outputs": [
@@ -157,13 +155,13 @@
        " 'planner': 1}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a dictionary that will be our bag-of-words.\n",
+    "# Create a dictionary that will be the bag-of-words.\n",
     "bag_of_words = {}\n",
     "for i in range (len(filtered_tokens)): \n",
     "    for word in filtered_tokens[i]: \n",
@@ -171,7 +169,7 @@
     "            bag_of_words[word] = 0 \n",
     "        bag_of_words[word] += 1\n",
     "\n",
-    "# Display the bag-of-words.\n",
+    "\n",
     "bag_of_words\n"
    ]
   },
@@ -185,19 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b71d0336",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the dependencies\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "4fd93692",
    "metadata": {},
    "outputs": [
@@ -218,13 +204,12 @@
     "# Fit the vectorizer to the input sentences and transform them into a bag of words\n",
     "bag_of_words = vectorizer.fit_transform([sentence_1, sentence_2, sentence_3])\n",
     "\n",
-    "# Print the resulting bag of words\n",
-    "print(bag_of_words.toarray()) #this vector array represents the number of times a vocab word appears in each sentence"
+    "print(bag_of_words.toarray()) #This vector array represents the number of times a vocab word appears in each sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "ad26a042",
    "metadata": {},
    "outputs": [
@@ -317,20 +302,20 @@
        "2         1       0     0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a DataFrame of the bag of words. \n",
+    "# Create a DF of the bag of words. \n",
     "df = pd.DataFrame(bag_of_words.toarray(), columns=vectorizer.get_feature_names_out())\n",
     "df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "ed96505f",
    "metadata": {},
    "outputs": [
@@ -349,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "0c724fcc",
    "metadata": {},
    "outputs": [
@@ -369,7 +354,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,14 +364,6 @@
     "occurences = df.sum(axis=0)\n",
     "occurences"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bacf9d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
