--- a/Question_Answering.ipynb
+++ b/Question_Answering.ipynb
@@ -92,47 +92,42 @@
     }
    ],
    "source": [
+    "# Import the pipeline class from the transformers module. \n",
     "from transformers import pipeline\n",
-    "import pandas as pd\n",
     "# Initialize the pipeline to generate questions and answers using the distilbert-base-cased-distilled-squad model. \n",
     "question_answerer = pipeline(\"question-answering\", model='distilbert-base-cased-distilled-squad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "id": "9QJdDFw5PJOL"
    },
    "outputs": [],
    "source": [
-    "# Source: https://en.wikipedia.org/wiki/Transformer_(machine_learning_model)\n",
-    "text = r\"\"\"\n",
-    "A transformer is a deep learning model that adopts the mechanism of self-attention, differentially weighting the significance of each part of the input data. It is used primarily in the fields of natural language processing (NLP)[1] and computer vision (CV).[2]\n",
-    "\n",
-    "Like recurrent neural networks (RNNs), transformers are designed to process sequential input data, such as natural language, with applications towards tasks such as translation and text summarization. However, unlike RNNs, transformers process the entire input all at once. The attention mechanism provides context for any position in the input sequence. For example, if the input data is a natural language sentence, the transformer does not have to process one word at a time. This allows for more parallelization than RNNs and therefore reduces training times.[1]\n",
-    "\n",
-    "Transformers were introduced in 2017 by a team at Google Brain[1] and are increasingly becoming the model of choice for NLP problems,[3] replacing RNN models such as long short-term memory (LSTM). The additional training parallelization allows training on larger datasets. This led to the development of pretrained systems such as BERT (Bidirectional Encoder Representations from Transformers) and GPT (Generative Pre-trained Transformer), which were trained with large language datasets, such as the Wikipedia Corpus and Common Crawl, and can be fine-tuned for specific tasks.[4][5]\n",
+    "# Provide text for the question and answering system.\n",
+    "text = \"\"\"The Mclaren P1, Porsche 918, and Ferrari LaFerrari are the 3 cars known as the Hypercar Holy Trinity. All three of these hypercars have mid-mounted gas and hybrid power, carbon-fiber tubs, active suspension and aerodynamics. The Mclaren P1 has a 3.8 litre V8 Hybrid engine that generates 916 horsepower, while the Ferrari is powered by a 6.3 liter V12 hybrid engine with 963 horsepower. Finally, the Porsche 918 has an 887 horsepower 4.6 litre V8 hybrid engine.\n",
     "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "id": "i5zKhFtWJVO4"
    },
    "outputs": [],
    "source": [
-    "#List of potential questions\n",
-    "questions = [\"When were transformers first introduced?\",\n",
-    "             \"What are transformers better than?\",\n",
-    "             \"What are applications of transformers?\"]"
+    "# Generate a list of questions.\n",
+    "questions = [\"What 3 cars are in the hypercar holy trinity?\", \n",
+    "             \"How much horsepower does a Mclaren P1 have?\", \n",
+    "             \"How many litres is the Ferrari engine?\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -154,30 +149,33 @@
     {
      "data": {
       "text/plain": [
-       "{'score': 0.9267650246620178, 'start': 864, 'end': 868, 'answer': '2017'}"
+       "{'score': 0.6809346675872803, 'start': 288, 'end': 291, 'answer': '916'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the output from one question.\n",
-    "question = \"When were transformeres first introduced?\"\n",
-    "result = question_answerer(question=question, context=text)\n",
-    "# Result gives the best string position for where the answer may lie\n",
-    "result\n"
+    "check_question = questions[1]\n",
+    "# Pass the first question and text to the question_answerer.\n",
+    "result = question_answerer(question=check_question, context=text)\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "id": "noR6Or28UADm"
    },
    "outputs": [],
    "source": [
+    "# Import Pandas \n",
+    "import pandas as pd\n",
+    "\n",
     "# Create a function to generate the answers based on an input text.\n",
     "def question_answer(questions, text):\n",
     "    data = []\n",
@@ -185,17 +183,18 @@
     "    for q in questions: \n",
     "        # Pass the question and text to the initialized question_answerer. \n",
     "        result = question_answerer(question=q, context=text)\n",
-    "        # Retrieve the question, answer, the score, the starting and ending of where the answer is located in the text.\n",
-    "        data.append([question, result['answer'], result['score'], result['start'], result['end']])\n",
+    "        # Retrieve the question, answer, the score, the starting \n",
+    "        # and ending of where the answer is located in the text.\n",
+    "        data.append([q, result['answer'], result['score'], result['start'], result['end']])\n",
     "    # Create a DataFrame from the data with appropriate columns. \n",
-    "    df = pd.DataFrame(data, columns=['Question', 'Answer', 'Score', 'Start Position', 'End Position'])\n",
+    "    df = pd.DataFrame(data, columns=['Question', 'Answer', 'Score', 'Starting Point', 'Ending Point'])\n",
     "    return df\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -239,59 +238,63 @@
        "      <th>Question</th>\n",
        "      <th>Answer</th>\n",
        "      <th>Score</th>\n",
-       "      <th>Start Position</th>\n",
-       "      <th>End Position</th>\n",
+       "      <th>Starting Point</th>\n",
+       "      <th>Ending Point</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>When were transformeres first introduced?</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>0.909150</td>\n",
-       "      <td>864</td>\n",
-       "      <td>868</td>\n",
+       "      <td>What 3 cars are in the hypercar holy trinity?</td>\n",
+       "      <td>P1, Porsche 918, and Ferrari LaFerrari</td>\n",
+       "      <td>0.001620</td>\n",
+       "      <td>12</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>When were transformeres first introduced?</td>\n",
-       "      <td>RNNs</td>\n",
-       "      <td>0.575200</td>\n",
-       "      <td>481</td>\n",
-       "      <td>485</td>\n",
+       "      <td>How much horsepower does a Mclaren P1 have?</td>\n",
+       "      <td>916</td>\n",
+       "      <td>0.680935</td>\n",
+       "      <td>288</td>\n",
+       "      <td>291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>When were transformeres first introduced?</td>\n",
-       "      <td>translation and text summarization</td>\n",
-       "      <td>0.855785</td>\n",
-       "      <td>429</td>\n",
-       "      <td>463</td>\n",
+       "      <td>How many litres is the Ferrari engine?</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>0.651782</td>\n",
+       "      <td>338</td>\n",
+       "      <td>341</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    Question  \\\n",
-       "0  When were transformeres first introduced?   \n",
-       "1  When were transformeres first introduced?   \n",
-       "2  When were transformeres first introduced?   \n",
+       "                                        Question  \\\n",
+       "0  What 3 cars are in the hypercar holy trinity?   \n",
+       "1    How much horsepower does a Mclaren P1 have?   \n",
+       "2         How many litres is the Ferrari engine?   \n",
        "\n",
-       "                               Answer     Score  Start Position  End Position  \n",
-       "0                                2017  0.909150             864           868  \n",
-       "1                                RNNs  0.575200             481           485  \n",
-       "2  translation and text summarization  0.855785             429           463  "
+       "                                   Answer     Score  Starting Point  \\\n",
+       "0  P1, Porsche 918, and Ferrari LaFerrari  0.001620              12   \n",
+       "1                                     916  0.680935             288   \n",
+       "2                                     6.3  0.651782             338   \n",
+       "\n",
+       "   Ending Point  \n",
+       "0            50  \n",
+       "1           291  \n",
+       "2           341  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Call the question_answer function with the questions and text.\n",
-    "question_answer(questions, text)"
+    "question_answer(questions,text)"
    ]
   }
  ],
